--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,43 @@
     <div class="modal-contenido">
       <span class="cerrar" id="cerrarModal">&times;</span>
       <div style="display: flex; align-items: center; justify-content: flex-start; gap: 16px; margin-bottom: 10px;">
-        <img src="Storage/Reloj.png" alt="Reloj" style="width: 100px; height: 100px;"/>
+        <button id="btnReloj" class="btn-reloj">
+          <img src="Storage/Reloj.png" alt="Reloj" style="width: 100px; height: 100px;"/>
+        </button>
         <span style="font-size: 1.2em; font-weight: bold; color: #333;">Tiempo de trabajo del personal</span>
       </div>
-      <h3 style="text-align:left;">Empleados</h3>
-      <div class="grafica" id="graficaPersonal"></div>
-      <div class="eje-x">
-        <div class="nombre-placeholder"></div>
-        <div id="ejeX" class="eje-x-numeros"></div>
+      <div style="display: flex; gap: 20px; align-items: flex-start;">
+        <div style="flex: 1;">
+          <div class="grafica" id="graficaPersonal"></div>
+          <div class="eje-x">
+            <div class="nombre-placeholder"></div>
+            <div id="ejeX" class="eje-x-numeros"></div>
+          </div>
+        </div>
+        <div class="leyenda">
+          <h4>Leyenda</h4>
+          <div class="leyenda-item">
+            <div class="leyenda-color verde"></div>
+            <span>Menos de 8 horas</span>
+          </div>
+          <div class="leyenda-item">
+            <div class="leyenda-color dorado"></div>
+            <span>Exactamente 8 horas</span>
+          </div>
+          <div class="leyenda-item">
+            <div class="leyenda-color rojo"></div>
+            <span>Más de 8 horas</span>
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
+
+  <!-- Popup emergente para información del empleado -->
+  <div id="popupEmpleado" class="popup-empleado">
+    <div class="popup-content">
+      <span class="popup-horas" id="popupHoras"></span>
+      <span class="popup-texto">horas</span>
     </div>
   </div>
 
